# backend

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 012b3ecbb710_nullable_addresses.py  07998baa8ed9_organizations.py  0b23c82e3c46_null_postcode.py  100677e079fc_organization_disabled_activated.py  188bb5517fb4_downgrade.py  190da4120da1_hidden_changelogs.py  1aca885a577d_cascade_delete_on_changelog.py  20ab8b1d31c7_activity_logs_disabled_reasons.py  239265592dcd_default_times_fix.py  25e92daf2c36_guest_user.py  25fd19bc8dfc_username_not_unique.py  276ae23a5ca5_org_logos.py  2c45f8ce631b_geostpatial_status.py  2d658a70e37e_zone_string.py  324d1f747d4a_organizational_leaders.py  4b0ea646798b_rename_hidden_changelogs_to_visible.py  4c9f076df50d_org_city_country.py  5ea607f695c1_organization_website_description.py  6055a1941c2a_user_registration_and_password_renewal_.py  66f23975e201_non_unique_address.py  68154b3fbb6d_report_assignment_expiration.py  6a7b4cfef54c_guest_user_otp_requests.py  76b150754966_oauth.py  81d359678504_zone.py  840a06f04da9_geospatial_index.py  84f620c1240d_user_password_can_be_null.py  9d20fe4a7ff7_changelog_submitted_by.py  a38f4e90950c_street_number.py  a42688359665_guest_user_phone_string.py  a56c6d322ed7_remove_action_type.py  a74b2d094d07_role_authority.py  b844325768ce_location_status.py  bdea60ac3a16_leader_removal.py  c7da3587db52_cascade_strategies.py  cae2891def63_organization_address.py  cd1e240a1aff_removing_role_model.py  d1a1b440aa14_organization_name_unique.py  d71393890604_location_regions.py  d782c4e7a9e8_roles_model.py  d79544b75e7b_unique_naming.py  (+5 more)
app/: main.py
app/api/: dependencies.py
app/core/: base_crud.py  config.py  logger_config.py  security.py
app/crud/: __init__.py  base.py  crud_basic_user.py  crud_changelogs.py  crud_geospatial.py  (+7 more)
black/: Dockerfile
(+122 files in other folders)
