[tool.poetry]
name = "dim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "22.1.0"
alembic = "1.8.1"
anyio = "3.6.1"
attrs = "22.1.0"
bcrypt = "4.0.0"
boto3 = "1.26.29"
botocore = "1.29.29"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
click-plugins = "1.1.1"
cligj = "0.7.2"
colorama = "0.4.5"
contourpy = "1.0.6"
cryptography = "38.0.1"
cycler = "0.11.0"
deprecated = "1.2.13"
dnspython = "2.2.1"
ecdsa = "0.18.0"
email-validator = "1.2.1"
et-xmlfile = "1.1.0"
fastapi = "0.80.0"
fiona = "1.8.22"
fonttools = "4.38.0"
geographiclib = "1.52"
geopandas = "0.12.2"
geopy = "2.2.0"
greenlet = "1.1.2"
h11 = "0.13.0"
idna = "3.3"
importlib-metadata = "4.12.0"
importlib-resources = "5.9.0"
iniconfig = "1.1.1"
jmespath = "1.0.1"
kiwisolver = "1.4.4"
limits = "2.8.0"
mako = "1.2.1"
markupsafe = "2.1.1"
matplotlib = "3.6.2"
munch = "2.5.0"
networkx = "2.8.8"
numpy = "1.23.5"
openpyxl = "3.0.10"
osmnx = "1.2.2"
packaging = "21.3"
pandas = "1.5.2"
passlib = "1.7.4"
pillow = "9.3.0"
pluggy = "1.0.0"
py = "1.11.0"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.9.2"
pygeohash = "1.2.0"
pyparsing = "3.0.9"
pyproj = "3.4.0"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pytz = "2022.6"
requests = "2.28.1"
rsa = "4.9"
rtree = "1.0.1"
s3transfer = "0.6.0"
shapely = "1.8.5.post1"
six = "1.16.0"
slowapi = "0.1.7"
sniffio = "1.2.0"
sqlalchemy = "1.4.40"
sqlalchemy-utils = "0.39.0"
starlette = "0.19.1"
tomli = "2.0.1"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
uvicorn = "0.18.3"
wrapt = "1.14.1"
zipp = "3.8.1"
gunicorn = "^20.1.0"
psycopg2-binary = "2.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
